# aigcore

./: .gitignore  README.md  pyproject.toml
aigco/: _logger.py
aigco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aigco/inference/: __init__.py  llm.py
aigco/inference/engine/: _model_runner.py  _scheduler.py  _sequence.py
aigco/inference/layers/activation/: __init__.py
aigco/inference/layers/embedding/: __init__.py  _embed_head.py  _rotary_embedding.py
aigco/inference/layers/sampler/: _sample.py
aigco/inference/models/: __init__.py
aigco/inference/utils/: __init__.py
aigco/llm/: __init__.py
aigco/llm/layers/: __init__.py
aigco/llm/layers/attention/: __init__.py  _self_attention.py
aigco/llm/layers/embedding/: _rope.py
aigco/llm/model/: _minimind.py
aigco/llm/models/: __init__.py  _minimind.py
aigco/llm/norm/: __init__.py  _norm.py
aigco/llm/trainer/: __init__.py
aigco/llm/trainer/lora/: __init__.py  _lora_base.py
aigco/llm/trainer/pretrain/: _train_pretrain.py
aigco/llm/trainer/tokenizer/: _config_tokenizer.py  _train_tokenizer.py  chat_template.txt
aigcore/: __init__.py
aigcore.egg-info/: SOURCES.txt
aigcore/llm/: __init__.py
aigcore/llm/attention/: _self_attention.py
aigcore/llm/model/: __init__.py
docs/: 1_train_tokenizer.md  publish_release.md
examples/: bench.py  infer_qwen3.py
tests/: test_self_attention.py
