[project]
name = "aigco"
version = "0.0.2"
description = "Omni LLM and Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "datasets>=2.18.0",
    "peft>=0.7.1",
    "pip>=24.0",
    "swanlab>=0.3.0",
    "torch>=2.4.0",
    "flash-attn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aigco*"]
exclude = ["examples*", "runs*"]

[pypi-options]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
